analysis/Mockito/step_1/logs/282-27d31a54c.log
Parallel execution is an incubating feature.
:buildSrc:clean UP-TO-DATE
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy/home/michel/Investigacion/bugs/projects/Mockito/buildSrc/src/main/groovy/org/mockito/release/notes/exec/Exec.java:8: error: cannot find symbol
        return new DefaultProcessRunner(workDir);
                   ^
  symbol:   class DefaultProcessRunner
  location: class Exec
Note: /home/michel/Investigacion/bugs/projects/Mockito/buildSrc/src/main/groovy/org/mockito/release/comparison/ZipCompare.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
startup failed:
Compilation failed; see the compiler error output for details.

1 error

 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileGroovy'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 2.07 secs
